--- a/ItemEntry/templates/index.html
+++ b/ItemEntry/templates/index.html
@@ -4,19 +4,17 @@
 
 
     <style>
-html {
-  scroll-behavior: smooth;
-}
+        html {
+          scroll-behavior: smooth;
+        }
         body{
             overflow: hidden;
         }
 
-        #form-step1{
+        form{
+            position: relative;
             height: 100vh;
-        }
-
-        form-step2{
-            height: 100vh;
+            overflow: scroll;
         }
 
     </style>
@@ -34,7 +32,29 @@ html {
 <h1>Welcome</h1>
 
 
-<form method="post" action="" id="form-step1" class="form-vertical">
+<form id="form-step1" class="form-vertical">
+   <fieldset>
+      <legend>Items</legend>
+      <div id="extender2">
+          <p style="display: block;"><input type="text"  class="inp" id="1" value="">
+              <input type="number" min="0.00" max="10000.00" step="0.01" />
+
+
+              <a class="dynamic-link" href="#step2">Remove</a></p>
+      </div>
+
+      <p><a id="add_btn2" href="#">Add</a></p>
+          <a href="#form-step2">next </a>
+
+    </fieldset>
+
+
+</form>
+
+
+
+
+<form method="post" action="" id="form-step2" class="form-vertical">
    <fieldset>
       <legend>Names</legend>
       <div id="extender">
@@ -47,8 +67,12 @@ html {
       </div>
 
       <p><a id="add_btn" href="#">Add</a></p>
+
+            <a href="#form-step2">next </a>
+
+            <a href="#form-step1">prev </a>
+
     </fieldset>
-        <a href="#form-step2">next </a>
 
 </form>
 
@@ -56,20 +80,6 @@ html {
 
 
 
-<form id="form-step2" class="form-vertical">
-   <fieldset>
-      <legend>Items</legend>
-      <div id="extender2">
-          <p style="display: block;"><input type="text"  class="inp" id="1" value="">
-              <input type="number" min="0.00" max="10000.00" step="0.01" />
-
-
-              <a class="dynamic-link" href="#step2">Remove</a></p>
-      </div>
-
-      <p><a id="add_btn2" href="#">Add</a></p>
-    </fieldset>
-</form>
 
 
 
