--- a/ItemEntry/templates/style.css
+++ b/ItemEntry/templates/style.css
@@ -9,7 +9,8 @@ html {
   height: 100%;
   margin: -24px;
   padding: 0;
-  background-color: #e5d858;
+  background-image:url('img/loading.png');
+    background-size: auto;
   z-index: 9999;
 }
 
@@ -27,7 +28,7 @@ body {
     background-image: url('img/background.png');
     font-family: 'Raleway', sans-serif;
     color: #222222;
-    padding: 100px;
+
 
 }
 
@@ -76,7 +77,10 @@ form {
     background-color: white;
     width: 700px;
     padding: 50px 75px 100px 75px;
-    margin: 0 auto; /*centers div on page*/
+    margin-top:100px;
+margin-bottom:0;
+margin-left:auto;
+margin-right:auto; /*centers div on page*/
     border-radius: 7px;
 }
 
@@ -139,6 +143,18 @@ h1 {
 }
 
 .scrollingDiv::-webkit-scrollbar { 
+    display: ; 
+}
+
+.scrollingDivLeft {
+    overflow:scroll;
+    height: 300px;
+    text-align: Left;
+    width: 700px;
+    overflow-x: hidden;
+}
+
+.scrollingDivLeft::-webkit-scrollbar { 
     display: ; 
 }
 
@@ -265,9 +281,9 @@ fieldset {
   margin: 2em auto;
   font-size: 1em;
   padding: 0.7em 1.5em;
-  border-radius: 5px;
-  border: 1px solid grey;
-  background: #57AED1;
+  border-radius: 15px;
+  border: none;
+  background: #494949;
     color: #fff;
     font-weight: bold;
     text-align: center;
@@ -302,52 +318,138 @@ fieldset {
 
 /*--------------------RADIO BUTTONS FOR SECTION 3 ------------*/
 
-
-/*--------------Check Box Styling -------------------------*/
-
-.checkbox-custom {
-  opacity: 0;
-  position: absolute;
+.scrollingDivLeft ul {
+  margin: 20px 0 0 20px;
+  padding: 0;
 }
 
-.checkbox-custom,
-.checkbox-custom-label {
-  display: inline-block;
-  vertical-align: middle;
-  margin: 5px;
+.scrollingDivLeft ul li {
+  margin-top: 10px;
+  list-style: none;
+}
+
+label.checkbox {
+  position: relative;
+  padding: 0 0 0 25px;
+  font-size: 1rem;
   cursor: pointer;
 }
-
-.checkbox-custom-label {
-  position: relative;
+label.checkbox input[type="checkbox"] {
+  display: none;
 }
-
-.checkbox-custom + .checkbox-custom-label:before {
+label.checkbox input[type="checkbox"]:checked + span {
+  opacity: 1;
+}
+label.checkbox::before {
+  position: absolute;
   content: '';
-  background: #fff;
-  border: 2px solid #ddd;
+  top: 3px;
+  left: 0;
+  height: 14px;
+  width: 14px;
+  border-radius: 2px;
+  border: 2px solid #16A085;
+}
+label.checkbox span {
+  position: absolute;
+  top: 3px;
+  left: 2px;
+  width: 12px;
+  height: 5px;
+  -ms-transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  opacity: 0;
+  transition: opacity 500ms ease;
+}
+label.checkbox span::before {
+  position: absolute;
+  content: '';
+  left: 11px;
+  width: 3px;
+  height: 11px;
+  background-color: #16A085;
+}
+label.checkbox span::after {
+  position: absolute;
+  content: '';
+  top: 8px;
+  left: 7px;
+  width: 4px;
+  height: 3px;
+  background-color: #16A085;
+}
+
+
+/*--------------SECTION 4 table Styling -------------------------*/
+
+.rwd-table {
+  margin: 1em 0;
+  min-width: 500px;
+}
+.rwd-table tr {
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+}
+.rwd-table th {
+  display: none;
+}
+.rwd-table td {
+  display: block;
+}
+.rwd-table td:first-child {
+  padding-top: .5em;
+}
+.rwd-table td:last-child {
+  padding-bottom: .5em;
+}
+.rwd-table td:before {
+  content: attr(data-th) ": ";
+  font-weight: bold;
+  width: 6.5em;
   display: inline-block;
-  vertical-align: middle;
-  width: 20px;
-  height: 20px;
-  margin-right: 10px;
-  text-align: center;
-  line-height: 1;
+}
+@media (min-width: 480px) {
+  .rwd-table td:before {
+    display: none;
+  }
+}
+.rwd-table th, .rwd-table td {
+  text-align: left;
+}
+@media (min-width: 480px) {
+  .rwd-table th, .rwd-table td {
+    display: table-cell;
+    padding: .25em .5em;
+  }
+  .rwd-table th:first-child, .rwd-table td:first-child {
+    padding-left: 0;
+  }
+  .rwd-table th:last-child, .rwd-table td:last-child {
+    padding-right: 0;
+  }
 }
 
-/*Simply Change the content to any font awesome unicode here to add your own check icon*/
-.checkbox-custom:checked + .checkbox-custom-label:before {
-  content: "\f00c";
-  font-family: 'FontAwesome';
-  background: #fe4365;
+
+.rwd-table {
+  background: #34495E;
   color: #fff;
-  text-align: center;
-  vertical-align: middle;
+  border-radius: .4em;
+  overflow: hidden;
 }
-
-.checkbox-custom:focus + .checkbox-custom-label {
-  outline: 1px solid #ddd;
-  /* focus style */
+.rwd-table tr {
+  border-color: #46637f;
+}
+.rwd-table th, .rwd-table td {
+  margin: .5em 1em;
+}
+@media (min-width: 480px) {
+  .rwd-table th, .rwd-table td {
+    padding: 1em !important;
+  }
+}
+.rwd-table th, .rwd-table td:before {
+  color: #dd5;
 }
 
 
