--- a/ItemEntry/templates/test.html
+++ b/ItemEntry/templates/test.html
@@ -1,32 +1,28 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="{% static "style.css" %}">
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
- 
+
 
 	<title>GrocerWe</title>
 
 
-
-
-
-
-
 </head>
-    
+
 <body>
-    
+
 
 <div class="bigContainer">
-<header> 
-    
-    <center> 
-<img src="img/grocerWeLogo.png" class="logo" ></center>
+<header>
+
+    <center>
+<img src="{% static "grocerWeLogo.png" %}" class="logo" ></center>
   <div id="stepsbar-wrap">
   <div id="stepsbar" class="stepsbar">
-      <center> 
+      <center>
     <ol>
       <li class="active"><span>Bill Items</span></li>
       <li ><span>Friends</span></li>
@@ -34,116 +30,116 @@
       <li><span>Results</span></li>
     </ol>
     </center>
-  </div>        
+  </div>
 </div>
-     </header> 
+     </header>
 
 <div class="formsHolder">
-   
+
     <h1>What items are you splitting?</h1>
-    
+
     <div class="scrollingDiv">
     <form id="form-step1" class="form-vertical">
-             
+
         <div id="extender2">
             <p style="display: block;">
-            
+
               <input type="text"  class="inp itemInput" id="1" value="" placeholder="Item">
                       <input type="number" min="0.00" max="10000.00" step="0.01" class="priceInput" placeholder="$"/>
 
-                
 
-            <a class="dynamic-link" href="#step2"><img src="img/remove.png" width="30px"></a></p>
+
+            <a class="dynamic-link" href="#step2"><img src="{% static "remove.png" %}" width="30px"></a></p>
         </div>
-        
 
-        <p><a id="add_btn2" href="#"><img src="img/add.png" width="30px"></a></p>
+
+        <p><a id="add_btn2" href="#"><img src="{% static "add.png" %}" width="30px"></a></p>
         </div>
         <a href="#form-step2" id="btn2" class="btn2 NPbtn"> Next </a>
         </form>
-        
-    
-    
+
+
+
   <!--section 2-->
 
     <div class="sectionSpacing" id="form-step2"> </div>
-    
-    
 
-<div class="section"> 
+
+
+<div class="section">
        <h1>Who is splitting the bill?</h1>
-     <div class="scrollingDiv">  
+     <div class="scrollingDiv">
     <form method="post" action="" id="form-step2" class="form-vertical" >
 
-  
 
- 
+
+
       <div id="extender">
 
-          <p style="display: block;"><input type="text"  class="inp nameInput" id="1" value="" placeholder="Name"><a class="dynamic-link" href="#step2"><img src="img/remove.png" width="30px"></a></p>
+          <p style="display: block;"><input type="text"  class="inp nameInput" id="1" value="" placeholder="Name"><a class="dynamic-link" href="#step2"><img src="{% static "remove.png" %}" width="30px"></a></p>
 
 
       </div>
 
-      <p><a id="add_btn" href="#"><img src="/img/add.png" width="30px"></a></p>
-</div> 
-      
-     <a href="#top" class="NPbtn btn1">prev </a>  
+      <p><a id="add_btn" href="#"><img src="{% static "add.png" %}" width="30px"></a></p>
+</div>
+
+     <a href="#top" class="NPbtn btn1">prev </a>
      <a href="#form-step3" class="NPbtn btn2"> next </a>
 </form>
-    
+
     </div>
     </div>
-    
+
     <!-- section 3-->
-    
+
    <div class="sectionSpacing" id="form-step3"> </div>
-    
-    
-<div class="section"> 
+
+
+<div class="section">
 
        <h1>What is Mark paying for?</h1>
-     <div class="scrollingDivLeft">  
- 
+     <div class="scrollingDivLeft">
+
            <ul>
     <li>
       <label class="checkbox"><input type="checkbox" name="" value="1">Jasmine Rice<span></span></label>
     </li>
-    
+
     <li>
       <label class="checkbox"><input type="checkbox" name="" value="1">Chicken Thigh<span></span></label>
     </li>
-    
+
     <li>
       <label class="checkbox"><input type="checkbox" name="" value="1">Eggs<span></span></label>
     </li>
-    
+
     <li>
       <label class="checkbox"><input type="checkbox" name="" value="1">Spicy Spam<span></span></label>
     </li>
-    
+
     <li>
       <label class="checkbox"><input type="checkbox" name="" value="1">Sriracha<span></span></label>
     </li>
-  </ul>  
+  </ul>
 
-    
+
     </div> <!--Scrolling Div End-->
-    
-         <a href="#form-step2" class="NPbtn btn1">prev </a>  
+
+         <a href="#form-step2" class="NPbtn btn1">prev </a>
        <a href="#form-step4" class="NPbtn btn2"> next </a>
-    
+
     </div>
-    
+
        <!-- section 4-->
-    
+
    <div class="sectionSpacing" id="form-step4"> </div>
-    
-    
-<div class="section"> 
+
+
+<div class="section">
 
        <h1>Here are everyone's totals!</h1>
-     <div class="scrollingDiv">  <center> 
+     <div class="scrollingDiv">  <center>
 <table class="rwd-table">
   <tr>
     <th>Name</th>
@@ -171,54 +167,54 @@
 
 <p>&larr; Drag window (in editor or full page view) to see the effect. &rarr;</p>
     </center>
-    </div> 
-         
-         <!--Scrolling Div End-->
-    
-         <a href="#form-step2" class="NPbtn btn1">prev </a>  
-       <a href="#top" class="NPbtn btn2"> done! </a>
-    
     </div>
-    
 
-           
-    
+         <!--Scrolling Div End-->
+
+         <a href="#form-step2" class="NPbtn btn1">prev </a>
+       <a href="#top" class="NPbtn btn2"> done! </a>
+
+    </div>
+
+
+
+
     </div> <!--formsHolder end-->
 
-       
-  
+
+
 
 
 <!--<button id="btn1" class="btn"> Step back</button>
 <button id="btn2" class="btn"> Next Step</button> -->
-    
-    
-    
+
+
+
     <!----------JS LINKS--------------------------------------->
 
 
 
     <script src="https://code.jquery.com/jquery-1.9.1.js"  integrity="sha256-e9gNBsAcA0DBuRWbm0oZfbiCyhjLrI6bmqAl5o+ZjUA=" crossorigin="anonymous"></script>
 
-    
 
-    <script type="text/javascript" src="/dotslide.js"></script>
-    <script type="text/javascript" src="/load.js"></script>
 
-    
-    
+    <script type="text/javascript" src="{% static "dotslide.js" %}"></script>
+    <script type="text/javascript" src="{% static "load.js" %}"></script>
+
+
+
 </body>
 
 
 <script>
-    
+
     //set a counter
     var j = $('#form-step1 :input').length + 1;
 
     //add input
     $('a#add_btn').click(function () {
         $('<p><input type="text" name="items[]" class="inp nameInput" placeholder="Name" id="' + j + '" value="" />' +
-            '<a class="dynamic-link" href="#step2"><img src="img/remove.png" width="30px"></a></p>').fadeIn("slow").appendTo('#extender');
+            '<a class="dynamic-link" href="#step2"><img src="{% static "remove.png" %}" width="30px"></a></p>').fadeIn("slow").appendTo('#extender');
         j++;
         return false;
     });
@@ -241,19 +237,19 @@ $(document).ready( function() { // Wait until document is fully parsed
 
   });
 });
-    
+
     </script>
-    
-    
+
+
     <script>
 
-    
+
 //set a counter for BUTTON2
     var k = $('#form-step2 :input').length + 1;
     //add input
     $('a#add_btn2').click(function () {
         $('<p><input type="text" name="items[]" class="inp itemInput" placeholder="Item" id="' + k + '" value="" /> <input type="number" name="items[]" class="inp priceInput" placeholder="$" id="' + k + '" value="" min="0.00" max="10000.00" step="0.01"  />' +
-            '<a class="dynamic-link" href="#step2"><img src="img/remove.png" width="30px"></a></p>').fadeIn("slow").appendTo('#extender2');
+            '<a class="dynamic-link" href="#step2"><img src=" {% static "remove.png" %}" width="30px"></a></p>').fadeIn("slow").appendTo('#extender2');
         k++;
         return false;
     });
